[package]
name = "sandbox"
version = "0.2.0"
authors = ["Eric Trombly <etrombly@yahoo.com>"]
description = "Etch-a-sketch in sand"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/etrombly/sandbox"
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
nb = "0.1.2"
cortex-m-semihosting = "0.3.3"
cortex-m-rt = "0.6.9"
libm = "0.1.4"
panic-abort = "0.3.1"
micromath = "0.3.1"

[dependencies.stm32f1]
version = "0.7.1"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]

[dependencies.cortex-m-rtfm]
version = "0.4.3"
# disabled nightly feature because maybeuninit syntax changed, waiting for patch
#features = ["nightly", "timer-queue"]
features = ["timer-queue"]

[dependencies.byteorder]
default-features = false
version = "1.3.2"

[dependencies.cobs]
default-features = false
version = "0.1.4"

[dependencies.gcode]
git = "https://github.com/Michael-F-Bryan/gcode-rs"
default-features = false

[dependencies.stepper-driver]
git = "https://github.com/etrombly/stepper-driver"

[[bin]]
name = "sandbox"
test = false
bench = false

[profile.release]
debug = true
lto = true
codegen-units = 1
