[package]
name = "sandbox"
version = "0.2.0"
authors = ["Eric Trombly <etrombly@yahoo.com>"]
description = "Etch-a-sketch in sand"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/etrombly/sandbox"
edition = "2018"

[dependencies]
cortex-m = "0.6.3"
nb = "1.0.0"
cortex-m-semihosting = "0.3.5"
cortex-m-rt = "0.6.12"
panic-abort = "0.3.2"
micromath = "1.0.1"
cortex-m-rtic = "0.5.3"

[dependencies.stm32f1]
version = "0.11.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["stm32f103", "rt"]

[dependencies.byteorder]
default-features = false
version = "1.3.4"

[dependencies.cobs]
default-features = false
version = "0.1.4"

[dependencies.gcode]
version = "0.6.1"
default-features = false

[dependencies.stepper-driver]
git = "https://github.com/etrombly/stepper-driver"

[[bin]]
name = "sandbox"
test = false
bench = false

[profile.release]
debug = true
lto = true
codegen-units = 1
